Stopped overflow of banner in mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,7 @@ body {
 .page-width {
   width: 100vw;
   max-width: 1024px;
+  overflow: hidden;
 }
 
 .banner {
